# testing-challenge

./: .gitignore  Resolution.md  dockerfile  package.json
.github/workflows/: ci_cd.yml
Exercise1-API/book-store/: README.md  pyproject.toml
Exercise1-API/book-store/.github/workflows/: ci_cd.yml
Exercise1-API/book-store/tests/: README.md  proba.py
Exercise2-UI/: pyproject.toml
Resolution/: README.md  Resolution.md  docker-compose.yml  package-lock.json  runTests.sh  tsconfig.json
Resolution/libs/: commands.sh
Resolution/src/common/fixtures/: testBaseFixture.ts
Resolution/src/common/testConfig/: GlobalConfig.ts
Resolution/src/common/utils/: RandomData.ts
Resolution/src/config/: prod.config.ts  stage.config.ts
Resolution/src/config/env/: prod.env
Resolution/src/config/testSetup/: GlobalTearDown.ts
Resolution/src/features/Exercise1-API/helpers/: bookStoreFixtures.ts
Resolution/src/features/Exercise1-API/tests/: bookStore.spec.ts
Resolution/src/features/Exercise2-UI/helpers/: webAppFixture.ts
Resolution/src/features/Exercise2-UI/pages/: DebugBearPage.ts
Resolution/src/features/Exercise2-UI/tests/: debugBear.spec.ts
app/: bookstore_api.py
src/common/: testBase.ts
src/common/types/: EnvType.ts  apiTypes.ts
src/common/utils/: WebUtils.ts
src/config/: local.config.ts
src/config/env/: local.env  stage.env
src/config/testSetup/: GlobalSetup.ts
src/features/Exercise1-API/helpers/: BookData.ts
src/features/Exercise1-API/steps/: bookStoreApi.ts
