[tool.poetry]
name = "exercise2-ui"
version = "0.1.0"
description = ""
authors = ["Martin S"]
readme = "README.md"
packages = [{include = "exercise2_ui"}]

[tool.poetry.dependencies]
python = "^3.10"
webdriver-manager = "^4.0.0"
selenium = "^4.12.0"
pytest-html = "^4.0.0"
pytest = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
